--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     <color name="actionBarText">@color/colorPrimaryDark</color>
     <color name="colorPrimary">@color/colorEven</color>
     <color name="colorPrimaryDark">#000000</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#FFD700</color>
 
     <color name="colorEven">#C0D6E4</color>
     <color name="colorOdd">#FFD6D7</color>
