--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,15 +6,17 @@
         http://www.computerhope.com/htmcolor.htm -->
 <resources>
     <color name="actionBarText">@color/colorPrimaryDark</color>
-    <color name="colorPrimary">@color/colorEven</color>
+    <color name="colorPrimary">@color/color_even</color>
     <color name="colorPrimaryDark">#000000</color>
     <color name="colorAccent">#FFD700</color>
 
-    <color name="colorEven">#C0D6E4</color>
-    <color name="colorOdd">#FFD6D7</color>
+    <color name="color_odd">#FFD6D7</color>
+    <color name="color_even">#C0D6E4</color>
 
     <color name="RedPigColorLogo">#da1b5b</color>
 
+    <color name="enabled_color">#000000</color>
+    <color name="disabled_color">#000000</color>
 
     <color name="t00">#C0D6E4</color>
 
