--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,4 +12,72 @@
     <style name="QuizTitleTextStyle" parent="@style/TextAppearance.AppCompat.Widget.ActionBar.Title">
         <item name="android:textColor">@color/colorPrimaryDark</item>
     </style>
+    <style name="QlayoutStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:gravity">bottom</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusableInTouchMode">true</item>
+        <item name="android:focusable">false</item>
+        <item name="android:orientation">vertical</item>
+    </style>
+    <style name="TableLayoutStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">5</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:shrinkColumns">*</item>
+        <item name="android:collapseColumns">1</item>
+    </style>
+    <style name="TableRowStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">0dp</item>
+        <item name="android:layout_weight">1</item>
+    </style>
+    <style name="TableCellStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:textSize">@dimen/large</item>
+    </style>
+    <style name="EmptyViewStyle">
+        <item name="android:layout_width">match_parent</item>
+    </style>
+    <style name="EmptyTopViewStyle" parent="EmptyViewStyle">
+        <item name="android:layout_height">@dimen/top_view_height</item>
+    </style>
+    <style name="EmptyBottomViewStyle" parent="EmptyViewStyle">
+        <item name="android:layout_height">@dimen/bottom_view_height</item>
+    </style>
+    <style name="MainTextViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_weight">3</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/xlarge</item>
+        <item name="android:paddingTop">@dimen/margin</item>
+        <item name="android:paddingBottom">@dimen/margin</item>
+    </style>
+    <style name="EditTextViewStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:textSize">@dimen/medium</item>
+        <item name="android:inputType">textVisiblePassword</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:privateImeOptions">nm</item>
+        <item name="android:hint">@string/H2</item>
+        <!--item name="android:textColor">@color/color_select</item -->
+        <item name="android:orientation">vertical</item>
+    </style>
+    <style name="theButtonStyle" parent="@style/Widget.AppCompat.Button">
+        <item name="android:layout_alignParentBottom">true</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:layout_gravity">center</item>
+        <item name="android:layout_margin">@dimen/margin</item>
+        <item name="android:paddingLeft">@dimen/margin</item>
+        <item name="android:paddingTop">@dimen/small_margin</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+        <item name="android:onClick">submitAnswer</item>
+    </style>
 </resources>
