$globalVariables with savedInstanceState

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,6 +63,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            android:focusableInTouchMode="false"
+            android:focusable="false"
             android:paddingLeft="@dimen/margin"
             android:paddingRight="@dimen/margin">
         <!--<LinearLayout/>:  A-Layout #A: description in MainActivity.java -->
