--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -22,4 +22,8 @@
     <dimen name="circle">115dp</dimen>
     <dimen name="bottom_view_height">96dp</dimen>
     <dimen name="top_view_height">56dp</dimen>
+    <!-- Soft Keyboard dimensions: -->
+    <dimen name="key_height">50dip</dimen>
+    <dimen name="candidate_font_height">16sp</dimen>
+    <dimen name="candidate_vertical_padding">6sp</dimen>
 </resources>
